--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
             <form class="form">
                 <label for="birthday">Start Date:</label>
                 <input type="date" id="startDate" name="startDate" required>
+
                 <label for="birthday">End Date:</label>
                 <input type="date" id="endDate" name="endDate" required>
+
+                <label for="birthday">Group Size:</label>
+                <input type="number" id="groupSize" name="groupSize" min="1" max="20" value="10">
+
                 <button type="submit" class="btn" id="submitBtn">Submit</button>
               </form>
 
@@ -28,6 +33,15 @@
                         <tr id="tableheader"></tr>
                     </thead>
                     <tbody id="tablebody"></tbody>
+                </table>
+            </div>
+            <h2 style="padding: 1em;">Frequent Number Groups</h2>
+            <div class="table-container">
+                <table id="frequencytable" style="margin: 0 auto">
+                    <thead>
+                        <tr id="freqtableheader"></tr>
+                    </thead>
+                    <tbody id="freqtablebody"></tbody>
                 </table>
             </div>
         </div>
