adding option to highlight winning number groups

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                     <tbody id="tablebody"></tbody>
                 </table>
             </div>
-            <h2 style="padding: 1em;">Frequent Number Groups</h2>
+            <button type="button" class="btn-secondary" id="dehighlightBtn" onclick="removeHighlight()">Remove Highlight</button>
+            <br>
+            <h2 style="padding: 1em; margin: 0; margin-top: 1em;">Frequent Number Groups</h2>
             <div class="table-container">
                 <table id="frequencytable" style="margin: 0 auto">
                     <thead>
